# softkinetic

./: CMakeLists.txt
softkinetic_camera/: package.xml
softkinetic_camera/launch/: ds325_cal_color.launch  ds325_cal_color_lowres.launch  ds325_map.launch  ds325_map.launch~  ds325_rect.launch  ds325_rect.launch~  softkinetic.rviz  softkinetic_camera_ds311_demo.launch  softkinetic_camera_ds325.launch
softkinetic_camera/resources/: senz3d.yaml  senz3d_lowres.yaml
softkinetic_camera/src/: softkinetic_start.cpp
